<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.cristhoper.moneyhelper.activities.NewOperationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        android:text="@string/regIngrEgr"
        android:paddingBottom="16dp"/>

    <EditText
        android:id="@+id/montoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:inputType="number"
        android:hint="@string/hintMonto"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">
        <RadioButton
            android:id="@+id/radioIngreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioIngr"
            android:textSize="18dp"
            android:layout_weight="1"
            android:onClick="radioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioEgreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioEgr"
            android:textSize="18dp"
            android:onClick="radioButtonClicked"/>
    </RadioGroup>

    <Spinner
        android:id="@+id/tipoCuentaSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:entries="@array/tipoCuenta"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegis"
        android:onClick="registrarOperacion"/>
</LinearLayout>

