<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.cristhoper.moneyhelper.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="14dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="italic"
            android:paddingBottom="18dp"
            android:text="@string/contIngrEgr" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:textSize="15sp"
                android:textStyle="italic"
                android:paddingBottom="10dp"
                android:text="@string/simbolSol"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingBottom="18dp"
                android:layout_weight="1"
                android:text="@string/saldoAhorro" />

            <TextView
                android:id="@+id/txtAhorro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAlignment="textEnd"
                android:paddingBottom="18dp"
                android:layout_weight="2"
                tools:text="S/: 1200" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingBottom="18dp"
                android:text="@string/saldoCredito" />

            <TextView
                android:id="@+id/txtCredito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAlignment="textEnd"
                android:paddingBottom="18dp"
                android:layout_weight="1"
                tools:text="S/: 2000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingBottom="18dp"
                android:text="@string/saldoEfectivo" />

            <TextView
                android:id="@+id/txtEfectivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAlignment="textEnd"
                android:paddingBottom="18dp"
                android:layout_weight="1"
                tools:text="S/: 120" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="italic"
            android:paddingTop="18dp"
            android:paddingBottom="8dp"
            android:text="@string/proporIngrEgr" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="18.5dp">
            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:progressTint="@color/colorMoney"
                android:progressBackgroundTint="@color/colorAccent"/>
            <TextView
                android:id="@+id/txtPorcentajes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="italic"
                android:textAlignment="center"

                tools:text="67 %   /   33 %"/>
        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@mipmap/ic_plus"
        android:onClick="nuevaOperacion"/>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:src="@mipmap/ic_statistic"
        android:onClick="verGrafica"/>
</RelativeLayout>


